# spotmicro_ros2

./: CMakeLists.txt  README.md  package.xml
src/calibration/: test.py
src/i2cpwmboard/: CMakeLists.txt  package.xml
src/i2cpwmboard/include/: pca9685_activity.h  smbus_functions.h
src/i2cpwmboard/msg/: Position.msg  PositionArray.msg  Servo.msg  ServoConfig.msg  ServoConfigArray.msg
src/i2cpwmboard/src/: i2cpwm_controller.cpp  pca9685_activity.cpp  pca9685_node.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/i2cpwmboard/srv/: IntValue.srv
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/ros2_i2cpwmboard/: CMakeLists.txt  package.xml
src/ros2_i2cpwmboard/src/: i2cpwm_controller.cpp
src/ros2_pca9685/: package.xml  setup.py
src/ros2_pca9685/ros2_pca9685/: publisher_member_function.py
src/servo_move_keyboard/: package.xml  setup.cfg  setup.py
src/servo_move_keyboard/servo_move_keyboard/: servo_test.py
src/spot_micro_keyboard_command/: package.xml  setup.cfg  setup.py
src/spot_micro_keyboard_command/spot_micro_keyboard_command/: spotMicroKeyboardMove.py
src/spot_micro_motion_cmd/: CMakeLists.txt  package.xml
src/spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml
src/spot_micro_motion_cmd/include/spot_micro_motion_cmd/: spot_micro_motion_cmd.h  utils.h
src/spot_micro_motion_cmd/launch/: launch.py
src/spot_micro_motion_cmd/lib/spot_micro_kinematics_cpp/: CMakeLists.txt
src/spot_micro_motion_cmd/lib/spot_micro_kinematics_cpp/include/spot_micro_kinematics/: spot_micro_kinematics.h  spot_micro_leg.h  utils.h
src/spot_micro_motion_cmd/lib/spot_micro_kinematics_cpp/src/: spot_micro_kinematics.cpp  spot_micro_leg.cpp  utils.cpp
src/spot_micro_motion_cmd/lib/spot_micro_kinematics_cpp/tests/: test_spot_micro_kinematics.cpp  test_spot_micro_leg.cpp  test_utils.cpp
src/spot_micro_motion_cmd/src/: spot_micro_motion_cmd.cpp  spot_micro_motion_cmd_node.cpp  test_param.py  utils.cpp
src/spot_micro_rviz/: CMakeLists.txt  package.xml
src/spot_micro_rviz/rviz/: spot_micro_ros2_rviz2.rviz
src/spot_micro_viz/: CMakeLists.txt  package.xml
src/spot_micro_viz/rviz/: spot_micro.rviz  spot_micro_ros2_rviz2.rviz
src/spot_micro_viz/urdf/: gen_urdf.sh  spot_micro.urdf
src/spotmicro/: CMakeLists.txt
src/spotmicro/src/: add_three_ints_client.cpp  add_three_ints_server.cpp  i2cpwm_board.cpp  publish_member_function.cpp  subscriber_member_function.cpp
src/spotmicro/srv/: ServosConfig.srv
